# vouchrs

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLIPPY_FIXES.md  CODE_ANALYSIS_DUPLICATION_COMPLEXITY.md  Cargo.toml  HEADER_PROCESSING_CONSOLIDATION.md  LICENSE  README.md  Settings.toml  build.rs  cliff.toml  release-plz.toml  release.toml  response.json  rustfmt.toml  tarpaulin-report.html
.cargo/: audit.toml  config.toml
.devcontainer/: devcontainer.json
.github/: ACTIONS_SETUP.md  dependabot.yml
.github/workflows/: README.md  cargo-release.yml  changelog.yml  ci.yml  codeql.yml  create-release.yml  dependabot.yml  docker-build.yml  docker.yml  main-release.yml  main-release.yml.disabled  release-plz.yml  release.yml
custom-ui/: passkey-one-button.html  passkey-one-button.js  passkey-register.html  passkey-register.js  passkey-signin.js  passkey-test.html  passkey-test.js  passkey-universal.html  passkey-universal.js  sign-in.css  sign-in.html
docker/: Dockerfile  docker-compose.sonarqube.yml  docker-compose.yml
docs/: API_REFERENCE.md  CONTAINER_DEPLOYMENT_GUIDE.md  CONVENTIONAL_COMMITS.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  IMPLEMENTATION_DETAILS.md  OPTIMIZATION_SUMMARY.md  README.md  REDIRECT_PROTECTION.md  SESSION_MODULE_REFACTOR.md  STATELESS_OAUTH_FLOW.md  UI_CUSTOMIZATION.md
scripts/: clear-build-caches.sh  create-release.sh  docker-build.sh  generate-sonar-token.sh  get-sonarqube-results.sh  run-sonarqube-scan.sh  test-ui-customization.sh
src/: api_proxy.rs  handlers.rs  jwt_session.rs  jwt_utils.rs  jwt_validation.rs  lib.rs  main.rs  models.rs  oauth.rs  passkey_session.rs  session.rs  session_builder.rs  session_validation.rs  settings.rs
src/authentication/: dependency_injection.rs  factory.rs  mod.rs  traits.rs
src/handlers/: auth.rs  callback.rs  debug.rs  helpers.rs  mod.rs  oauth.rs  passkey.rs  proxy_upstream.rs  session_builder.rs  static_files.rs  tests.rs  types.rs
src/jwt_handlers/: auth.rs  callback.rs  debug.rs  helpers.rs  mod.rs  session_builder.rs  tests.rs  types.rs
src/models/: auth.rs
src/oauth/: config.rs  jwt_validation.rs  mod.rs  providers.rs  service.rs  token_processor.rs  tokens.rs
src/passkey/: cbor.rs  errors.rs  handlers.rs  mod.rs  service.rs  service_new.rs  session.rs  settings.rs  types.rs  user_store.rs  webauthn.rs
src/session/: auth_results.rs  cookie.rs  manager.rs  mod.rs  oauth.rs  passkey.rs  token_processor.rs  utils.rs  validation.rs
src/static/: passkey-register.html  passkey-register.js  passkey-signin.js  sign-in.css  sign-in.html
src/testing/: assertions.rs  builders.rs  fixtures.rs  mock.rs  mod.rs  requests.rs
src/utils/: apple.rs  apple_utils.rs  cached_responses.rs  cookie.rs  cookie_utils.rs  crypto.rs  error_handler.rs  header_processor.rs  headers.rs  lazy_format.rs  logging.rs  mod.rs  oauth_utils.rs  redirect_validator.rs  response_builder.rs  responses.rs  test_helpers.rs  test_request_builder.rs  user_agent.rs  validation.rs
src/validation/: core.rs  mod.rs  oauth_callback.rs  passkey.rs  redirect.rs
src/webauthn/: attestation.rs  crypto.rs  errors.rs  mod.rs  service.rs  settings.rs  types.rs
tests/: apple_jwt_integration_test.rs  integration_test.rs  integration_validation_tests.rs  openredirects.txt  persistent_user_data_test.rs
